# SFML_Template

./: .gitignore  CMakeLists.txt
tests/: Source.cpp
